--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,48 @@
-plugins {
-    id 'java'
+buildscript {
+    ext {
+        springBootVersion = '2.3.6.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+allprojects {
+    group 'com.joshua'
+    version '1.0'
 
-repositories {
-    mavenCentral()
+    apply plugin : 'java'
+    apply plugin : 'org.springframework.boot'
+    apply plugin : 'io.spring.dependency-management'
+
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        annotationProcessor("org.projectlombok:lombok")
+        compileOnly ('org.projectlombok:lombok')
+        compile ('org.springframework.boot:spring-boot-starter-web')
+        compile('org.springframework.boot:spring-boot-starter-data-jpa')
+        compile 'mysql:mysql-connector-java'
+        testImplementation('org.springframework.boot:spring-boot-starter-test')
+    }
+    test {
+        useJUnitPlatform()
+    }
+
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-}
+subprojects {
 
-test {
-    useJUnitPlatform()
+
+
+
 }
