--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
         compileOnly ('org.projectlombok:lombok')
         compile ('org.springframework.boot:spring-boot-starter-web')
         compile('org.springframework.boot:spring-boot-starter-data-jpa')
+        implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
         compile 'mysql:mysql-connector-java'
         testImplementation('org.springframework.boot:spring-boot-starter-test')
     }
