--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ allprojects {
         compile ('org.springframework.boot:spring-boot-starter-web')
         compile('org.springframework.boot:spring-boot-starter-data-jpa')
         implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+        implementation 'javax.validation:validation-api'
+
         compile 'mysql:mysql-connector-java'
         testImplementation('org.springframework.boot:spring-boot-starter-test')
     }
