--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects {
         compile('org.springframework.boot:spring-boot-starter-data-jpa')
         implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
         implementation 'javax.validation:validation-api'
+        compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.0'
 
         compile 'mysql:mysql-connector-java'
         testImplementation('org.springframework.boot:spring-boot-starter-test')
