--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
         implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
         implementation 'javax.validation:validation-api'
         compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.0'
-
+        runtimeOnly 'com.h2database:h2'
         compile 'mysql:mysql-connector-java'
         testImplementation('org.springframework.boot:spring-boot-starter-test')
     }
